[gd_scene load_steps=4 format=3 uid="uid://c8uu0vjdbcap3"]

[ext_resource type="PackedScene" uid="uid://igt0cl0wc7uu" path="res://ui/components/list_item/list_item.tscn" id="1_084du"]
[ext_resource type="Script" uid="uid://dhrqoya685crj" path="res://ui/components/transport-line-list-item/transport_line_list_item.gd" id="2_yp3y0"]
[ext_resource type="Texture2D" uid="uid://c8tlwd3socdr0" path="res://assets/ui_icons/visibility.png" id="3_iabes"]

[node name="TransportLineListItem" instance=ExtResource("1_084du")]
script = ExtResource("2_yp3y0")

[node name="LineVisibilityButton" type="Button" parent="." index="0"]
layout_mode = 2
icon = ExtResource("3_iabes")
flat = true

[node name="LineColor" type="ColorRect" parent="." index="1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
